// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributeTypes 1`] = `
Object {
  "age": Integer {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "created_at": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "email": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "id": Integer {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "name": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "updated_at": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
}
`;

exports[`columns 1`] = `
Array [
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "id",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "INTEGER",
      "type": "integer",
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": "untitled",
    "defaultFunction": null,
    "name": "name",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "email",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": "0",
    "defaultFunction": null,
    "name": "age",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "integer",
      "type": "integer",
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "created_at",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "updated_at",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
]
`;

exports[`group 1`] = `"SELECT \\"users\\".* FROM \\"users\\" GROUP BY name"`;

exports[`joins string 1`] = `"SELECT \\"users\\".* FROM \\"users\\" LEFT JOIN bookmarks ON bookmarks.user_id = users.id"`;

exports[`limit 1`] = `"SELECT  \\"users\\".* FROM \\"users\\" LIMIT 1"`;

exports[`limit 2`] = `"SELECT  \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' LIMIT 1"`;

exports[`lookupCastType 1`] = `
Integer {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`new 1`] = `
Object {
  "age": FromDatabase {
    "_value": 0,
    "name": "age",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "0",
  },
  "created_at": FromDatabase {
    "name": "created_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "email": FromUser {
    "_value": "new@example.com",
    "name": "email",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "new@example.com",
  },
  "id": FromDatabase {
    "name": "id",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "name": FromUser {
    "_value": "new",
    "name": "name",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "new",
  },
  "updated_at": FromDatabase {
    "name": "updated_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
}
`;

exports[`new 2`] = `
Object {
  "age": 0,
  "created_at": undefined,
  "email": "new@example.com",
  "id": undefined,
  "name": "new",
  "updated_at": undefined,
}
`;

exports[`offset 1`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name ASC LIMIT -1 OFFSET 10"`;

exports[`order 1`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"name\\" ASC"`;

exports[`order 2`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"email\\" DESC"`;

exports[`order 3`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"name\\" ASC, \\"users\\".\\"email\\" DESC"`;

exports[`order 4`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name"`;

exports[`order 5`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name DESC"`;

exports[`order 6`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name DESC, email"`;

exports[`records 1`] = `Array []`;

exports[`records 2`] = `
Array [
  User {
    "_newRecord": false,
    "_startTransactionState": Object {},
    "attributes": Object {},
    "destroyed": false,
    "destroyedByAssociation": null,
    "markedForDestruction": false,
    "proxy": [Circular],
    "readonly": false,
    "transactionState": null,
  },
]
`;

exports[`select 1`] = `"SELECT \\"users\\".\\"name\\", \\"users\\".\\"email\\", email as user_email FROM \\"users\\""`;

exports[`table.type 1`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`table.type 2`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`tableStructure 1`] = `
Array [
  Object {
    "cid": 0,
    "dflt_value": null,
    "name": "id",
    "notnull": 1,
    "pk": 1,
    "type": "INTEGER",
  },
  Object {
    "cid": 1,
    "dflt_value": "'untitled'",
    "name": "name",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 2,
    "dflt_value": null,
    "name": "email",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 3,
    "dflt_value": "0",
    "name": "age",
    "notnull": 0,
    "pk": 0,
    "type": "integer",
  },
  Object {
    "cid": 4,
    "dflt_value": null,
    "name": "created_at",
    "notnull": 1,
    "pk": 0,
    "type": "datetime",
  },
  Object {
    "cid": 5,
    "dflt_value": null,
    "name": "updated_at",
    "notnull": 1,
    "pk": 0,
    "type": "datetime",
  },
]
`;

exports[`tables 1`] = `
Array [
  "users",
  "posts",
]
`;

exports[`where 1`] = `"SELECT \\"users\\".* FROM \\"users\\""`;

exports[`where 2`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test'"`;

exports[`where 3`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' AND \\"users\\".\\"email\\" = 'test@example.com'"`;

exports[`where 4`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' AND \\"users\\".\\"email\\" = 'test@example.com'"`;

exports[`where 5`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE (name = 'test') AND (age = 10)"`;

exports[`where 6`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE (id = 1)"`;
